<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.keycloak</groupId>
  <artifactId>keycloak-benchmark-parent</artifactId>
  <version>0.8-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Keycloak Benchmark Parent</name>
  <description>Keycloak Benchmark Parent</description>

  <properties>
    <keycloak.version>19.0.1</keycloak.version>
    <jboss-jaxrs-api_2.1_spec>2.0.1.Final</jboss-jaxrs-api_2.1_spec>
    <resteasy.version>3.15.1.Final</resteasy.version>
    <junit.version>4.13.2</junit.version>
    <maven.compiler.source>11</maven.compiler.source>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <resteasy.version>4.7.4.Final</resteasy.version>
    <maven.compiler.target>11</maven.compiler.target>
    <encoding>UTF-8</encoding>
  </properties>

  <!-- TODO: Module "gatling" is not yet included as the module. Not sure what are side-effect of this with regards to size to "gatling" JAR and running tests in cloud environments...  -->
  <modules>
    <module>dataset</module>
    <module>benchmark</module>
    <module>provision/tlsdisableagent/java-instrumentation-tool</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.keycloak</groupId>
        <artifactId>keycloak-core</artifactId>
        <version>${keycloak.version}</version>
      </dependency>
      <dependency>
        <groupId>org.keycloak</groupId>
        <artifactId>keycloak-server-spi</artifactId>
        <version>${keycloak.version}</version>
      </dependency>
      <dependency>
        <groupId>org.keycloak</groupId>
        <artifactId>keycloak-server-spi-private</artifactId>
        <version>${keycloak.version}</version>
      </dependency>
      <dependency>
        <groupId>org.keycloak</groupId>
        <artifactId>keycloak-services</artifactId>
        <version>${keycloak.version}</version>
      </dependency>
      <dependency>
        <groupId>org.keycloak</groupId>
        <artifactId>keycloak-model-jpa</artifactId>
        <version>${keycloak.version}</version>
      </dependency>
      <dependency>
        <groupId>org.keycloak</groupId>
        <artifactId>keycloak-model-infinispan</artifactId>
        <version>${keycloak.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.resteasy</groupId>
        <artifactId>resteasy-core</artifactId>
        <version>${resteasy.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.spec.javax.ws.rs</groupId>
        <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
        <version>${jboss-jaxrs-api_2.1_spec}</version>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git://github.com/keycloak/keycloak-benchmark.git</connection>
    <developerConnection>scm:git:git@github.com:keycloak/keycloak-benchmark.git</developerConnection>
    <url>https://github.com/keycloak/keycloak-benchmark/tree/main/</url>
    <tag>HEAD</tag>
  </scm>

  <!-- TODO: probably not needed? -->
  <!--<repositories>
    <repository>
      <id>jboss</id>
      <url>https://repository.jboss.org/nexus/content/groups/public/</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>-->

</project>
